# desk-changer

./: .editorconfig  .gitignore  .prettierrc  CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  daemon.js  daemon.old.vala  daemon.vala  desk-changer-daemon.py  desk-changer.cmb  eslint.config.mjs  extension.js  metadata.json  org.gnome.shell.extensions.desk-changer.gschema.xml  package.json  prefs.js  settings.js  test.sh  tsconfig.json
.github/workflows/: release-build.yml
applets/gnome-shell/: desk-changer-dbus.xml  extension.js  metadata.json  util.js
applets/gnome-shell/schemas/: gschemas.compiled  org.gnome.shell.extensions.desk-changer.gschema.xml
desk-changer@eric.gach.gmail.com/: _deskchanger.js  convenience.js  daemon.js  desk-changer-daemon.py  deskchanger.js  extension.js  menu.js  metadata.json  prefs.js  prefs.ui  profile.js  run-any-python.sh  service.js  settings.js  timer.js  ui.js  utils.js
desk-changer@eric.gach.gmail.com/common/: interface.js  logging.js  rotation.js  service.js  settings.js  utils.js
desk-changer@eric.gach.gmail.com/daemon/: interface.js  profile.js  server.js  timer.js
desk-changer@eric.gach.gmail.com/deskchanger/: __init__.py  application.py  logger.py  profiles.py  timer.py  wallpapers.py
desk-changer@eric.gach.gmail.com/resources/: org.gnome.Shell.Extensions.DeskChanger.gresource.xml  org.gnome.Shell.Extensions.DeskChanger.xml
desk-changer@eric.gach.gmail.com/resources/ui/: prefs.3.ui  prefs.glade.ui  prefs.ui  rotation.glade.ui
desk-changer@eric.gach.gmail.com/schemas/: gschemas.compiled  org.gnome.Shell.Extensions.DeskChanger.gschema.xml  org.gnome.shell.extensions.desk-changer.gschema.xml
desk-changer@eric.gach.gmail.com/ui/: control.js  panelMenu.js  popupMenu.js  preview.js  profiles.js
desk-changer@eric.gach.gmail.com/ui/common/: location_row.js  profiles.js
desk-changer@eric.gach.gmail.com/ui/dialog/: add.js  alert.js  keybind.js  new.js
desk-changer@eric.gach.gmail.com/ui/prefs/: about.js  daemon.js  extension.js  keyboard.js  profiles.js
desk-changer@eric.php-oop.net/: daemon.js  daemon.py  daemon.vala  extension.js  metadata.json  prefs.js  settings.js
desk-changer@eric.php-oop.net/schemas/: gschemas.compiled  org.gnome.shell.extension.desk-changer.gschema.xml  org.gnome.shell.extensions.desk-changer.gschema.xml
desk_changer/: __init__.py  daemon.py  dbus.py  settings.py  wallpapers.py
desk_changer/schemas/: gschemas.compiled  org.gnome.desk-changer.gschema.xml
po/: compile.sh  desk-changer-daemon.pot  desk-changer.pot  xgettext.txt
po/fr/: desk-changer-daemon.po  desk-changer.po
po/zh_CN/: desk-changer-daemon.po  desk-changer.po
resources/: com.feralinteractive.GameMode.xml  org.gnome.Shell.Extensions.DeskChanger.Daemon.service.in  org.gnome.Shell.Extensions.DeskChanger.gresource.xml  org.gnome.shell.extensions.desk-changer.gresource.xml
resources/Daemon/: org.gnome.Shell.Extensions.DeskChanger.Daemon.xml
resources/service/: org.gnome.Shell.Extensions.DeskChanger.Service.xml
resources/ui/: prefs.3.ui  prefs.glade  prefs.ui  profiles.ui  rotation.ui
resources/ui/dialog/: add.ui  alert.ui  keybind.ui  new.ui  remove.ui
resources/ui/prefs/: about.glade  about.ui  about_page.ui  daemon.glade  daemon.ui  extension.glade  extension.ui  extension_page.ui  keyboard.glade  keyboard.ui  keyboard_page.ui  profiles.glade  (+3 more)
schemas/: org.gnome.shell.extensions.desk-changer.gschema.xml
src/: daemon.vala  extension.ts  prefs.ts
src/common/: interface.ts  rotation_modes.ts  settings.d.ts
src/service/: base.ts  dbus.ts  gamemode.ts  index.ts  interface.ts  runner.ts
(+46 files in other folders)
