# The actual runnable program is set to the SCRIPTS primitive.
# # Prefix bin_ tells where to copy this
bin_PROGRAMS = $(top_builddir)/desk-changer@eric.gach.gmail.com/desk-changer-daemon
__top_builddir__desk_changer@eric_gach_gmail_com_desk_changer_daemon_CFLAGS=$(glib_CFLAGS) $(jsonglib_CFLAGS)
__top_builddir__desk_changer@eric_gach_gmail_com_desk_changer_daemon_LDADD=$(glib_LIBS) $(jsonglib_LIBS)
__top_builddir__desk_changer@eric_gach_gmail_com_desk_changer_daemon_VALAFLAGS = --pkg gio-2.0 --pkg json-glib-1.0
__top_builddir__desk_changer@eric_gach_gmail_com_desk_changer_daemon_SOURCES = src/daemon.vala

