# This file is processed by autoconf to create a configure script
AC_INIT([Desk Changer Daemon], 1.0)
AM_INIT_AUTOMAKE([1.10 no-define foreign dist-xz no-dist-gzip])
AC_PROG_CC
AM_PROG_VALAC([0.16])
PKG_CHECK_MODULES(gio, gio-2.0)
PKG_CHECK_MODULES(glib, glib-2.0)
PKG_CHECK_MODULES(jsonglib, json-glib-1.0)
AC_CONFIG_FILES([Makefile])

AC_OUTPUT